Fixed layout issues

--- a/A1/style.css
+++ b/A1/style.css
@@ -18,8 +18,8 @@ div {
 .panel {
 	border: 1px solid #000;
 	background: #fff;
-	margin: 0.5em;
-	padding: 0.5em;
+	margin: 9px;
+	padding: 9px;
 }
 
 #header,
@@ -31,11 +31,17 @@ div {
 
 /* desktop */
 @media only screen 
-and (min-width: 1000px) {
+and (min-width: 1240px) {
 	body {
 	}
 	#wrapper {
-		overflow: overlay;
+		width: 1240px;
+		margin: 0 auto;
+	}
+	#inner-wrapper {
+		float: left;
+		width: 920px;
+		margin-bottom: 10px;
 	}
 
 	#header, 
@@ -45,26 +51,35 @@ and (min-width: 1000px) {
 	
 	#navigation {
 		float: left;
-		width: 13em;
+		width: 280px;
 	}
 
 	#body {
-		margin: 0.5em 15em;
+		float: right;
+		width: 560px;
 	}
 
 	#side-panel {
 		float: right;
-		width: 13em;
+		width: 280px;
 	}
 
 }
 
 /* smartphone */
 @media only screen 
-and (max-width: 980px and max-width: 980px) {
+and (max-width: 1240px) {
 	body {
 	}
 	
+	#wrapper {
+		width: 100%;
+		max-width: 980px;
+		margin: 0 auto;
+	}
+	#inner-wrapper {
+	}
+
 	#navigation {
 	}
 
